--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <br>
                     <br>I am currently enrolled at <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and am fluent in the following web and programming languages: HTML, CSS, JavaScript, SQL, C#, C++ and more. I am also fluent in Unreal and Unity Game Engine.
                     <br>
-                    <br>I am a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!
+                    <br>I am a full-stack developer and would love to work with you on your project. You can check out my <a href="https://www.linkedin.com/in/john-michals/">Linkedin</a> or my <a href="https://docs.google.com/document/d/1UWxbmk2KN7QTQJ7Eqeff_lDg9EmeSXjOeRzWaEkUAN8/edit">resume</a>. Or you can <a href="#Contact">Contact</a> me below!
                 </p>
             </div>
         </div>
