--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <p class="center">
                     You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/the-tech-academy" target="_blank">The Tech Academy Github</a></p>
+                    <p class="center"><a href="https://github.com/johnrmichals" target="_blank">My Github</a></p>
                 </p>
             </div>
             <!--Right column-->
